service.yaml
apiVersion: v1
kind: Service
metadata:
  name: draco2-service
  labels:
    name: draco2
spec:
  type: NodePort
  ports:
    - port: 7070
      nodePort: 31333
      name: http
    - port: 7575
      nodePort: 31444
      name: data
  selector:
    name: draco2
